welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:2: error: not found: value dog
dog
^MethodsDogHouse:5: error: not found: value poseBrosse
	poseBrosse();
        ^MethodsDogHouse:16: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:22: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:32: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:42: error: not found: value dogHouse
		dogHouse();		
                ^